--- a/index.html
+++ b/index.html
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Patas-Nobres</title>
+    <link rel="stylesheet" href="public/styles/style.css">
+    <link rel="stylesheet" href="public/styles/navbar.css">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Ícone -->
+    <link rel="icon" href="img/Pata-Nobre.png" type="image/png">
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Arsenal+SC:ital,wght@0,400;0,700;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Limelight&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
 </head>
 <body>
-    Conteudo da pagina.
+    <nav class="navbar navbar-expand-lg" style="background-color: #1b203b;" data-bs-theme="light">
+      <div class="container-fluid">
+        <a class="navbar-brand d-flex align-items-center" href="#">
+          <img src="img/Pata-Nobre.png" alt="Logo" width="80" height="80" class="d-inline-block align-text-top">
+          <span class="fonte-limelight ms-2">Patas Nobres</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#fff" class="bi bi-arrow-down-left-square" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm10.096 3.146a.5.5 0 1 1 .707.708L6.707 9.95h2.768a.5.5 0 1 1 0 1H5.5a.5.5 0 0 1-.5-.5V6.475a.5.5 0 1 1 1 0v2.768z"/>
+            </svg>
+          </span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="ms-auto d-flex">
+            <a href="#about" class="btn btn-outline-light btn-navbar me-2">About</a>
+            <a href="#service" class="btn btn-outline-light btn-navbar me-2">Service</a>
+            <a href="#contato" class="btn btn-outline-light btn-navbar me-2">Contato</a>
+            <button type="button" class="btn btn-outline-light btn-navbar" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <section id="about" style="height: 100vh;">
+        <h1>Sobre nós</h1>
+        <!-- Conteúdo sobre -->
+    </section>
+    <section id="service" style="height: 100vh;">
+        <h1>Serviços</h1>
+        <!-- Conteúdo serviços -->
+    </section>
+    <section id="contato" style="height: 100vh;">
+        <h1>Contato</h1>
+        <!-- Conteúdo contato -->
+    </section>
+
+    <!-- Modal Login Bootstrap -->
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="loginModalLabel">Login</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+          </div>
+          <div class="modal-body">
+            <p>Em breve: opção de criar ou entrar em uma conta.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
