--- a/index.html
+++ b/index.html
@@ -16,30 +16,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #1b203b;" data-bs-theme="light">
-      <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center" href="#">
-          <img src="img/Pata-Nobre.png" alt="Logo" width="80" height="80" class="d-inline-block align-text-top">
-          <span class="fonte-limelight ms-2">Patas Nobres</span>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#fff" class="bi bi-arrow-down-left-square" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm10.096 3.146a.5.5 0 1 1 .707.708L6.707 9.95h2.768a.5.5 0 1 1 0 1H5.5a.5.5 0 0 1-.5-.5V6.475a.5.5 0 1 1 1 0v2.768z"/>
-            </svg>
-          </span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <div class="ms-auto d-flex">
-            <a href="#about" class="btn btn-outline-light btn-navbar me-2">About</a>
-            <a href="#service" class="btn btn-outline-light btn-navbar me-2">Service</a>
-            <a href="#contato" class="btn btn-outline-light btn-navbar me-2">Contato</a>
-            <button type="button" class="btn btn-outline-light btn-navbar" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
-          </div>
-        </div>
-      </div>
-    </nav>
+    <div id="navbar"></div>
 
     <section id="about" style="height: 100vh;">
         <h1>Sobre nós</h1>
@@ -69,5 +46,12 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      fetch('public/componentes/navbar.html')
+        .then(response => response.text())
+        .then(data => {
+          document.getElementById('navbar').innerHTML = data;
+        });
+    </script>
 </body>
 </html>
