--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
     <div id="hero"></div>
 
+    <div id="about"></div>"
+
     <section id="about" style="height: 100vh;">
         <h1>Sobre nós</h1>
         <!-- Conteúdo sobre -->
@@ -58,6 +60,12 @@
         .then(response => response.text())
         .then(data => {
         document.getElementById('hero').innerHTML = data;
+      });
+
+      fetch('public/componentes/about.html')
+        .then(response => response.text())
+        .then(data => {
+        document.getElementById('about').innerHTML = data;
       });
 
     </script>
