--- a/public/componentes/about.html
+++ b/public/componentes/about.html
@@ -13,7 +13,7 @@
   <div style="position: absolute; top: 70%; left: 70%; width: 60px; height: 60px; background: #ffffff; opacity: 0.4; border-radius: 50%; z-index: 1;"></div>
 
   <div class="d-flex justify-content-center align-items-center" style="height: 100%;">
-    <div class="card shadow-lg border-0" style="max-width: 700px; width: 100%; background: rgba(39, 43, 71, 0.662); color: #fff; position: relative; z-index: 2;">
+    <div class="card shadow-lg border-0" style="max-width: 700px; width: 100%; background: rgba(39, 43, 71, 0.662); color: #fffffffd; position: relative; z-index: 2;">
       <div class="card-body text-center">
         <h2 class="card-title fonte-limelight mb-4">Sobre o Pata Nobre</h2>
         <p class="card-text lead">
