Animaçao nos cards

--- a/public/componentes/service.html
+++ b/public/componentes/service.html
@@ -1,7 +1,7 @@
 <div class="container py-5">
   <div class="row justify-content-center">
     <div class="col-md-3 d-flex justify-content-center mb-4">
-      <div class="card" style="width: 18rem;">
+      <div class="card card-lift" style="width: 18rem;">
         <img src="/public/img/ai-generated-8592228_1280.jpg" class="card-img-top" alt="Veterinário">
         <div class="card-body text-center">
           <h5 class="card-title">Veterinário</h5>
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="col-md-3 d-flex justify-content-center mb-4">
-      <div class="card" style="width: 18rem;">
+      <div class="card card-lift" style="width: 18rem;">
         <img src="/public/img/banho-tosa.jpg" class="card-img-top" alt="Banho e Tosa">
         <div class="card-body text-center">
           <h5 class="card-title">Banho e Tosa</h5>
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="col-md-3 d-flex justify-content-center mb-4">
-      <div class="card" style="width: 18rem;">
+      <div class="card card-lift" style="width: 18rem;">
         <img src="/public/img/pote.jpg" class="card-img-top" alt="Utensílios">
         <div class="card-body text-center">
           <h5 class="card-title">Utensílios</h5>
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="col-md-3 d-flex justify-content-center mb-4">
-      <div class="card" style="width: 18rem;">
+      <div class="card card-lift" style="width: 18rem;">
         <img src="/public/img/dog-5883275_1280.jpg" class="card-img-top" alt="Hotel Pet">
         <div class="card-body text-center">
           <h5 class="card-title">Hotel Pet</h5>
