--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Patas-Nobres</title>
     <link rel="stylesheet" href="public/styles/style.css">
     <link rel="stylesheet" href="public/styles/navbar.css">
+    <link rel="stylesheet" href="public/styles/feedback.css">
+    <link rel="stylesheet" href="public/styles/whatssap.css">
+    <link rel="stylesheet" href="public/styles/footer.css">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Ícone -->
@@ -22,12 +25,19 @@
 
     <div id="about"></div>
 
+    <!-- Adicione uma margem extra antes do service -->
+    <div style="margin-top: 90px;"></div>
+
     <div id="service"></div>
+
+    <div id="feedback"></div>
 
     <section id="contato" style="height: 100vh;">
         <h1>Contato</h1>
         <!-- Conteúdo contato -->
     </section>
+
+    <div id="whatsapp"></div>
 
     <!-- Modal Login Bootstrap -->
     <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
@@ -43,6 +53,8 @@
         </div>
       </div>
     </div>
+
+    <div id="footer"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       fetch('public/componentes/navbar.html')
@@ -67,6 +79,24 @@
         .then(data => {
         document.getElementById('service').innerHTML = data;
       });
+
+      fetch('public/componentes/feedback.html')
+        .then(response => response.text())
+        .then(data => {
+        document.getElementById('feedback').innerHTML = data;
+      });
+
+      fetch('public/componentes/whatssap.html')
+        .then(response => response.text())
+        .then(data => {
+        document.getElementById('whatsapp').innerHTML = data;
+      });
+
+      fetch('public/componentes/footer.html')
+        .then(response => response.text())
+        .then(data => {
+          document.getElementById('footer').innerHTML = data;
+        });
 
     </script>
 </body>
