mais componetes carrosel e adicionais

--- a/public/componentes/about.html
+++ b/public/componentes/about.html
@@ -19,6 +19,8 @@
         <p class="card-text lead">
           Somos apaixonados por pets! No Pata Nobre, oferecemos serviços completos para o bem-estar do seu animal de estimação: banho & tosa, hotel, creche, atendimento veterinário e uma seleção de acessórios. Nosso compromisso é garantir carinho, segurança e felicidade para o seu melhor amigo.
         </p>
+        <a href="#patinhas" class="btn btn-outline-primary mx-auto">Ver mais</a>
+
       </div>
     </div>
   </div>
