--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="public/styles/feedback.css">
     <link rel="stylesheet" href="public/styles/whatssap.css">
     <link rel="stylesheet" href="public/styles/footer.css">
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Ícone -->
@@ -32,12 +33,11 @@
 
     <div id="feedback"></div>
 
-    <section id="contato" style="height: 100vh;">
-        <h1>Contato</h1>
-        <!-- Conteúdo contato -->
-    </section>
-
     <div id="whatsapp"></div>
+
+    <div id="carousel"></div>
+
+    <div id="patinhas"></div>
 
     <!-- Modal Login Bootstrap -->
     <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
@@ -96,6 +96,18 @@
         .then(response => response.text())
         .then(data => {
           document.getElementById('footer').innerHTML = data;
+        });
+
+      fetch('public/componentes/carrosel.html')
+        .then(response => response.text())
+        .then(data => {
+        document.getElementById('carousel').innerHTML = data;
+        });
+
+      fetch('public/componentes/patinhas.html')
+        .then(response => response.text())
+        .then(data => {
+        document.getElementById('patinhas').innerHTML = data;
         });
 
     </script>
