--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <body>
     <div id="navbar"></div>
 
+    <div id="modal"></div>
+
     <div id="hero"></div>
 
     <div id="about"></div>
@@ -38,21 +40,6 @@
     <div id="carousel"></div>
 
     <div id="patinhas"></div>
-
-    <!-- Modal Login Bootstrap -->
-    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="loginModalLabel">Login</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
-          </div>
-          <div class="modal-body">
-            <p>Em breve: opção de criar ou entrar em uma conta.</p>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div id="footer"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -108,6 +95,12 @@
         .then(response => response.text())
         .then(data => {
         document.getElementById('patinhas').innerHTML = data;
+        });
+
+        fetch('public/componentes/modal.html')
+        .then(response => response.text())
+        .then(data => {
+        document.getElementById('modal').innerHTML = data;
         });
 
     </script>
