--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="public/styles/feedback.css">
     <link rel="stylesheet" href="public/styles/whatssap.css">
     <link rel="stylesheet" href="public/styles/footer.css">
+    <link rel="stylesheet" href="public/styles/modal.css">
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
