--- a/public/componentes/navbar.html
+++ b/public/componentes/navbar.html
@@ -16,7 +16,7 @@
       <div class="ms-auto d-flex">
         <a href="#about" class="btn btn-outline-light btn-navbar me-2">About</a>
         <a href="#service" class="btn btn-outline-light btn-navbar me-2">Service</a>
-        <a href="#contato" class="btn btn-outline-light btn-navbar me-2">Contato</a>
+        <a href="#footer" class="btn btn-outline-light btn-navbar me-2">Contato</a>
         <button type="button" class="btn btn-outline-light btn-navbar" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
       </div>
     </div>
