--- a/public/componentes/modal.html
+++ b/public/componentes/modal.html
@@ -1,10 +1,13 @@
+<!-- Modal Cadastro de Cliente -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
+      <!-- Header -->
       <div class="modal-header">
         <h5 class="modal-title" id="loginModalLabel">Cadastro</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
+      <!-- Body -->
       <div class="modal-body">
         <form id="formCadastro">
 
@@ -34,24 +37,22 @@
           </div>
 
           <div class="input-group">
-            <input required type="email" class="input" id="email">
+            <input required type="email" class="input" id="email" autocomplete="email">
             <label class="user-label" for="email">Email</label>
           </div>
 
           <div class="input-group">
-            <input required type="password" class="input" id="password">
+            <input required type="password" class="input" id="password" autocomplete="new-password">
             <label class="user-label" for="password">Senha</label>
           </div>
 
           <!-- Botão Cadastrar -->
-            <div class="d-flex justify-content-center mt-3">
-                <button type="submit" class="btn-modal-form">
-                    <span class="btn-text-one">Cadastrar</span>
-                    <span class="btn-text-two">Enviar</span>
-                </button>
-            </div>
-
-
+          <div class="d-flex justify-content-center mt-3">
+            <button type="submit" class="btn-modal-form">
+              <span class="btn-text-one">Cadastrar</span>
+              <span class="btn-text-two">Enviar</span>
+            </button>
+          </div>
 
         </form>
       </div>
