Login e cadastro funcionando com sucesso

--- a/public/componentes/navbar.html
+++ b/public/componentes/navbar.html
@@ -17,7 +17,7 @@
         <a href="#about" class="btn btn-outline-light btn-navbar me-2">About</a>
         <a href="#service" class="btn btn-outline-light btn-navbar me-2">Service</a>
         <a href="#footer" class="btn btn-outline-light btn-navbar me-2">Contato</a>
-        <button type="button" class="btn btn-outline-light btn-navbar" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+        <a href="pages/login.html" class="btn btn-outline-light btn-navbar">Login</a>
       </div>
     </div>
   </div>
