Login e cadastro estilo novo

--- a/pages/login.html
+++ b/pages/login.html
@@ -21,6 +21,7 @@
 
     <div class="login-container">
       <div class="login-left">
+        <img src="../public/img/Logo-Pata-Nobre.png" class="logo-login" alt="Logo Petshop">
         <button class="tab-btn active" id="btnLoginTab">Login</button>
         <button class="tab-btn" id="btnCadastroTab">Sign Up</button>
       </div>
@@ -48,6 +49,9 @@
           <input type="text" id="cadEndereco" placeholder="Endereço">
           <input type="email" id="cadEmail" placeholder="Email">
           <input type="password" id="cadSenha" placeholder="Senha">
+
+        
+
 
           <button type="submit" class="btn-login">Cadastrar</button>
         </form>
